<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="rtl"
        android:background="@color/backGround"
>
    <LinearLayout
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
    >
        <ImageView
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                app:srcCompat="@drawable/ic_security"
                android:tint="@color/colorAccent"
                android:layout_width="@dimen/imgBig"
                android:layout_height="@dimen/imgBig"/>
        <TextView
                android:layout_marginBottom="32dp"
                android:textSize="@dimen/txt"
                android:textColor="@color/colorAccent"
                android:text="@string/terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <com.google.android.material.card.MaterialCardView
                app:shapeAppearanceOverlay="@style/CVTopRound"
                app:cardBackgroundColor="@color/backGround"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <LinearLayout
                    android:padding="16dp"
                    android:layout_marginTop="@dimen/radius"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:background="@drawable/txt_border_dark"
                        android:text="@string/test"
                        android:textColor="@color/dark"
                        android:textSize="@dimen/txt"
                        android:padding="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/cbxTerms"
                        android:textSize="@dimen/txt"
                        android:textColor="@color/dark"
                        android:text="@string/acceptTerms"
                        android:layout_marginTop="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnNextTerms"
                        android:textSize="@dimen/txt"
                        android:layout_marginTop="16dp"
                        android:textColor="@color/dark"
                        android:text="@string/next"
                        android:padding="8dp"
                        android:backgroundTint="@color/colorAccent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</ScrollView>