<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layoutDirection="rtl"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/radius"
        app:cardBackgroundColor="@color/dialogBack"
>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <ProgressBar
                android:id="@+id/pBarAboutMe"
                android:layout_margin="32dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <EditText
                android:inputType="textLongMessage"
                android:autofillHints="ok"
                android:maxLength="100"
                android:lineSpacingExtra="@dimen/lineSpace"
                android:gravity="start"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/dialogText"
                android:minWidth="120dp"
                android:minHeight="100dp"
                android:padding="16dp"
                android:hint="@string/aboutMeHint"
                android:textColorHint="@color/dialogHint"
                android:background="@drawable/txt_border"
                android:textSize="@dimen/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtAboutMe"
                android:visibility="gone"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/LLBtnAboutMe" android:visibility="gone">
            <Button
                    android:textSize="@dimen/txt"
                    android:layout_weight="1"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/btnSave"
                    android:textColor="@color/dialogBtnText"
                    android:backgroundTint="@color/colorAccent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/btnSaveAboutMe"/>
            <Button
                    android:textSize="@dimen/txt"
                    android:layout_weight="1"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/btnCancel"
                    android:textColor="@color/dialogBtnText"
                    android:backgroundTint="@color/colorAccent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/btnCancellAboutMe"/>

        </LinearLayout>
        <TextView
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:lineSpacingExtra="@dimen/lineSpace"
                android:textColor="@color/dialogText"
                android:text="@string/aboutMeInfo"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_info"
                android:textSize="@dimen/txtSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>