<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                   android:orientation="vertical"
                                   android:layoutDirection="rtl"
                                   app:cardCornerRadius="@dimen/radius"
                                   app:cardBackgroundColor="@color/dialogBack"
                                   android:layout_width="wrap_content"
                                   android:layout_height="wrap_content">
<LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <ImageView
            android:background="@drawable/btn_close"
            android:layout_width="@dimen/btnCloseSize"
            android:layout_height="@dimen/btnCloseSize"/>
    <EditText
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_insta"
            android:gravity="start"
            android:minWidth="120dp"
            android:textSize="@dimen/txt"
            android:textColor="@color/dialogText"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:padding="8dp"
            android:background="@drawable/txt_border"
            android:textColorHint="@color/dialogHint"
            android:hint="social"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <EditText
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_insta"
            android:gravity="start"
            android:minWidth="120dp"
            android:textSize="@dimen/txt"
            android:textColor="@color/dialogText"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:padding="8dp"
            android:background="@drawable/txt_border"
            android:textColorHint="@color/dialogHint"
            android:hint="social"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <EditText
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_insta"
            android:gravity="start"
            android:minWidth="120dp"
            android:textSize="@dimen/txt"
            android:textColor="@color/dialogText"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:padding="8dp"
            android:background="@drawable/txt_border"
            android:textColorHint="@color/dialogHint"
            android:hint="social"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <Button
                android:backgroundTint="@color/colorAccent"
                android:textSize="@dimen/txt"
                android:text="@string/btnSave"
                android:layout_weight="1"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:textColor="@color/dialogBtnText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        <Button
                android:backgroundTint="@color/colorAccent"
                android:textSize="@dimen/txt"
                android:text="@string/btnCancel"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:textColor="@color/dialogBtnText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView
            android:drawablePadding="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="32dp"
            android:text="@string/aboutMeInfo"
            android:drawableStart="@drawable/ic_info"
            android:textColor="@color/dialogText"
            android:textSize="@dimen/txtSmall"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
</LinearLayout>
</androidx.cardview.widget.CardView>